--- a/custom_components/versatile_thermostat/translations/fr.json
+++ b/custom_components/versatile_thermostat/translations/fr.json
@@ -33,10 +33,9 @@
           "sync_device_internal_temp": "Synchronisation de la température de l'appareil",
           "lock": "Gestion du verrouilage",
           "heating_failure_detection": "Détection de panne de chauffage",
-          "auto_tpi_1": "Auto TPI - Général",
-          "auto_tpi_2": "Auto TPI - Méthode",
-          "auto_tpi_3_avg": "Auto TPI - Moyenne",
-          "auto_tpi_3_ema": "Auto TPI - EMA",
+          "auto_tpi_configuration": "Auto TPI - Configuration",
+          "auto_tpi_avg_settings": "Auto TPI - Moyenne pondérée",
+          "auto_tpi_ema_settings": "Auto TPI - EWMA",
           "finalize": "Finaliser la création",
           "configuration_not_complete": "Configuration incomplète"
         }
@@ -285,45 +284,29 @@
           "max_closing_degree": "Fermeture maximale. La vanne ne sera jamais fermée au-delà de cette valeur. Mettez à 100 pour fermer complètement la vanne"
         }
       },
-      "auto_tpi_1": {
-        "title": "Auto TPI - Général",
+      "auto_tpi_configuration": {
+        "title": "Auto TPI - Configuration",
         "description": "Paramètres généraux de l'apprentissage Auto TPI.",
         "data": {
-          "auto_tpi_enable_update_config": "Mise à jour de la configuration",
-          "auto_tpi_enable_notification": "Notifications",
-          "auto_tpi_keep_ext_learning": "Continuer l'apprentissage du coeff externe",
-          "auto_tpi_continuous_learning": "Apprentissage continu",
+          "auto_tpi_learning_type": "Type d'apprentissage",
           "heater_heating_time": "Temps de chauffe (min)",
           "heater_cooling_time": "Temps de refroidissement (min)",
-          "auto_tpi_max_coef_int": "Coefficient Interne Max",
           "auto_tpi_heating_rate": "Taux de chauffe ({unit}/h)",
-          "auto_tpi_aggressiveness": "Agressivité"
+          "auto_tpi_aggressiveness": "Agressivité",
+          "auto_tpi_enable_advanced_settings": "Activer les paramètres avancés"
         },
         "data_description": {
-          "auto_tpi_enable_update_config": "Mettre à jour automatiquement la configuration avec les coefficients appris",
-          "auto_tpi_enable_notification": "Envoyer une notification lorsque l'apprentissage est terminé",
-          "auto_tpi_keep_ext_learning": "Continuer l'apprentissage du coefficient externe tant que les 2 n'ont pas atteint les 50 cycles ",
-          "auto_tpi_continuous_learning": "Si cochée, le système continuera à calculer et appliquer de nouveaux coefficients silencieusement après que l'apprentissage soit terminé (méthode EMA recommandée).",
+          "auto_tpi_learning_type": "Choisissez 'Découverte' pour le démarrage initial (Moyenne pondérée, poids 1) ou 'Réglage Fin' pour des ajustements continus (EWMA, Alpha 0.08).",
           "heater_heating_time": "Temps pour atteindre la pleine puissance (minutes)",
           "heater_cooling_time": "Temps pour refroidir après arrêt (minutes)\n\n| Type | Temps de chauffe | Temps de refroidissement |\n| :--- | :--- | :--- |\n| Radiateur électrique | 5mn | 7mn |\n| Radiateur à eau | 15mn | 20mn |\n| Chauffage par le sol | 30mn | 45mn |",
-          "auto_tpi_max_coef_int": "Valeur maximale autorisée pour le coefficient interne (Coeff Int)",
-          "auto_tpi_heating_rate": "Capacité de montée en température du radiateur ({unit} par heure). Peux être estimée depuis le service action 'Calibrer la capacité'",
-          "auto_tpi_aggressiveness": "Facteur de réduction des coefficients appris (50-100%). Des valeurs plus basses donnent des coefficients plus conservateurs et réduisent le risque de dépassement de consigne."
+          "auto_tpi_heating_rate": "Capacité de montée en température du radiateur ({unit} par heure). Laisser à 0 pour l'apprentissage automatique (bootstrap).",
+          "auto_tpi_aggressiveness": "Facteur de réduction des coefficients appris (50-100%). Des valeurs plus basses donnent des coefficients plus conservateurs et réduisent le risque de dépassement de consigne.",
+          "auto_tpi_enable_advanced_settings": "Cochez pour accéder au réglage fin des paramètres (Alpha, Décroissance, Poids)."
         }
       },
-      "auto_tpi_2": {
-        "title": "Auto TPI - Méthode",
-        "description": "Choisissez la méthode de calcul pour l'apprentissage.",
-        "data": {
-          "auto_tpi_calculation_method": "Méthode de calcul"
-        },
-        "data_description": {
-          "auto_tpi_calculation_method": "Moyenne : moyenne simple. EMA : Moyenne Mobile Exponentielle (favorise les valeurs récentes)"
-        }
-      },
-      "auto_tpi_3_avg": {
-        "title": "Auto TPI - Moyenne",
-        "description": "Paramètres pour la méthode Moyenne.",
+      "auto_tpi_avg_settings": {
+        "title": "Auto TPI - Moyenne pondérée",
+        "description": "Paramètres pour la méthode Moyenne pondérée.",
         "data": {
           "auto_tpi_avg_initial_weight": "Poids Initial"
         },
@@ -331,9 +314,9 @@
           "auto_tpi_avg_initial_weight": "Poids de la valeur initiale/précédente dans le calcul de la moyenne"
         }
       },
-      "auto_tpi_3_ema": {
-        "title": "Auto TPI - EMA",
-        "description": "Paramétres pour la méthode EMA.\n\nRecommandations :\n| Situation | Alpha (ema_alpha) | Taux de Décroissance (ema_decay_rate) |\n| :--- | :--- | :--- |\n| Apprentissage initial | 0.15 | 0.08 |\n| Apprentissage fin | 0.08 | 0.12 |\n| Apprentissage continu | 0.05 | 0.02 |",
+      "auto_tpi_ema_settings": {
+        "title": "Auto TPI - EWMA",
+        "description": "Paramètres pour la méthode EWMA.\n\nRecommandations :\n| Situation | Alpha (ema_alpha) | Taux de Décroissance (ema_decay_rate) |\n| :--- | :--- | :--- |\n| Apprentissage initial | 0.15 | 0.08 |\n| Apprentissage fin | 0.08 | 0.12 |\n| Apprentissage continu | 0.05 | 0.02 |",
         "data": {
           "auto_tpi_ema_alpha": "Alpha",
           "auto_tpi_ema_decay_rate": "Taux de décroissance"
@@ -424,10 +407,6 @@
           "sync_device_internal_temp": "Synchronisation de la température de l'appareil",
           "lock": "Verrouillage",
           "heating_failure_detection": "Détection de panne de chauffage",
-          "auto_tpi_1": "Auto TPI - Général",
-          "auto_tpi_2": "Auto TPI - Méthode",
-          "auto_tpi_3_avg": "Auto TPI - Moyenne",
-          "auto_tpi_3_ema": "Auto TPI - EMA",
           "finalize": "Finaliser les modifications",
           "configuration_not_complete": "Configuration incomplète"
         }
@@ -679,55 +658,39 @@
           "max_closing_degree": "Fermeture maximale. La vanne ne sera jamais fermée au-delà de cette valeur. Mettez à 100 pour fermer complètement la vanne"
         }
       },
-      "auto_tpi_1": {
-        "title": "Auto TPI - Général - {name}",
+      "auto_tpi_configuration": {
+        "title": "Auto TPI - Configuration - {name}",
         "description": "Paramètres généraux de l'apprentissage Auto TPI.",
         "data": {
-          "auto_tpi_enable_update_config": "Mise à jour de la configuration",
-          "auto_tpi_enable_notification": "Notifications",
-          "auto_tpi_keep_ext_learning": "Continuer l'apprentissage du coeff externe",
-          "auto_tpi_continuous_learning": "Appentissage continu",
+          "auto_tpi_learning_type": "Type d'apprentissage",
+          "auto_tpi_heating_rate": "Taux de chauffe ({unit}/h)",
           "heater_heating_time": "Temps de chauffe (min)",
           "heater_cooling_time": "Temps de refroidissement (min)",
-          "auto_tpi_max_coef_int": "Coefficient Interne Max",
-          "auto_tpi_heating_rate": "Taux de chauffe ({unit}/h)",
-          "auto_tpi_aggressiveness": "Agressivité"
+          "auto_tpi_aggressiveness": "Agressivité",
+          "auto_tpi_enable_advanced_settings": "Activer les paramètres avancés"
         },
         "data_description": {
-          "auto_tpi_enable_update_config": "Mettre à jour automatiquement la configuration avec les coefficients appris",
-          "auto_tpi_enable_notification": "Envoyer une notification lorsque l'apprentissage est terminé",
-          "auto_tpi_keep_ext_learning": "Continuer l'apprentissage du coefficient externe tant que les 2 n'ont pas atteint les 50 cycles ",
-          "auto_tpi_continuous_learning": "Si cochée, le système continuera à calculer et appliquer de nouveaux coefficients silencieusement après que l'apprentissage soit terminé (méthode EMA recommandée).",
+          "auto_tpi_learning_type": "Choisissez 'Découverte' pour le démarrage initial (Moyenne pondérée, poids 1) ou 'Ajustement fin' pour des ajustements continus (EWMA, Alpha 0.08).",
+          "auto_tpi_heating_rate": "Capacité de montée en température du radiateur ({unit} par heure). Laisser à 0 pour l'apprentissage automatique (bootstrap).",
           "heater_heating_time": "Temps pour atteindre la pleine puissance (minutes)",
           "heater_cooling_time": "Temps pour refroidir après arrêt (minutes)\n\n| Type | Temps de chauffe | Temps de refroidissement |\n| :--- | :--- | :--- |\n| Radiateur électrique | 5mn | 7mn |\n| Radiateur à eau | 15mn | 20mn |\n| Chauffage par le sol | 30mn | 45mn |",
-          "auto_tpi_max_coef_int": "Valeur maximale autorisée pour le coefficient interne (Coeff Int)",
-          "auto_tpi_heating_rate": "Capacité de montée en température du radiateur ({unit} par heure). Peux être estimée depuis le service action 'Calibrer la capacité'",
-          "auto_tpi_aggressiveness": "Facteur de réduction des coefficients appris (50-100%). Des valeurs plus basses donnent des coefficients plus conservateurs et réduisent le risque de dépassement de consigne."
+          "auto_tpi_aggressiveness": "Facteur de réduction des coefficients appris (50-100%). Des valeurs plus basses donnent des coefficients plus conservateurs et réduisent le risque de dépassement de consigne.",
+          "auto_tpi_enable_advanced_settings": "Cochez pour modifier les paramètres de l'algorithme choisi."
         }
       },
-      "auto_tpi_2": {
-        "title": "Auto TPI - Méthode - {name}",
-        "description": "Choisissez la méthode de calcul pour l'apprentissage.",
-        "data": {
-          "auto_tpi_calculation_method": "Méthode de calcul"
-        },
-        "data_description": {
-          "auto_tpi_calculation_method": "Moyenne : moyenne simple. EMA : Moyenne Mobile Exponentielle (favorise les valeurs récentes)"
-        }
-      },
-      "auto_tpi_3_avg": {
-        "title": "Auto TPI - Moyenne - {name}",
-        "description": "Paramètres pour la méthode Moyenne.",
+      "auto_tpi_avg_settings": {
+        "title": "Auto TPI - Moyenne pondérée - {name}",
+        "description": "Paramètres pour la méthode Moyenne pondérée.",
         "data": {
           "auto_tpi_avg_initial_weight": "Poids Initial"
         },
         "data_description": {
-          "auto_tpi_avg_initial_weight": "Poids de la valeur initiale/précédente dans le calcul de la moyenne"
+          "auto_tpi_avg_initial_weight": "Poids initial des coefficients existants dans le calcul de la moyenne (1-50 est typique). Plus le poids est élevé, plus l'apprentissage est lent et stable."
         }
       },
-      "auto_tpi_3_ema": {
-        "title": "Auto TPI - EMA - {name}",
-        "description": "Paramétres pour la méthode EMA.\n\nRecommandations :\n| Situation | Alpha (ema_alpha) | Taux de Décroissance (ema_decay_rate) |\n| :--- | :--- | :--- |\n| Apprentissage initial | 0.15 | 0.08 |\n| Apprentissage fin | 0.08 | 0.12 |\n| Apprentissage continu | 0.05 | 0.02 |",
+      "auto_tpi_ema_settings": {
+        "title": "Auto TPI - EWMA - {name}",
+        "description": "Paramétres pour la méthode EWMA.\n\nRecommandations :\n| Situation | Alpha (ema_alpha) | Taux de Décroissance (ema_decay_rate) |\n| :--- | :--- | :--- |\n| Ajustements fort | 0.15 | 0.08 |\n| Ajustement fin | 0.08 | 0.12 |",
         "data": {
           "auto_tpi_ema_alpha": "Alpha",
           "auto_tpi_ema_decay_rate": "Taux de décroissance"
@@ -843,6 +806,12 @@
       "options": {
         "average": "Moyenne",
         "ema": "Moyenne Mobile Exponentielle (EMA)"
+      }
+    },
+    "auto_tpi_learning_type": {
+      "options": {
+        "discovery": "Découverte",
+        "fine_tuning": "Ajustement fin"
       }
     }
   },
